# actix-devops-web

./: Cargo.toml  Dockerfile  README.md  deployment.yaml  diesel.toml  docker-compose.yaml
actix-chart/: Chart.yaml  values.yaml
actix-chart/templates/: _helpers.tpl  deployment.yaml  service.yaml
charts/: deployment.yaml  service.yaml
charts/actix-app/: deployment.yaml  postgres.yaml  service.yaml
migrations/2025-09-12-075738_create_ipdatabase/: down.sql  up.sql
src/: db.rs  main.rs  model.rs  schema.rs
templates/: index.html.tera
