[package]
name = "actix-devops-web"
authors = ["Inwerejosic"]
version = "0.1.0"
# Used 2021 because must 2024 tool were unstable for production release build
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
# Template rendering in actix-web
tera = "1.19"
# Data serialization
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"

# Database and time dependencies
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0"
r2d2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }



# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }